`Ctrl+K` keyboard shortcut activates the addressbar's default search engine, but doesn't focus it
With Epiphany 45.2 (WebKitGTK 2.42.3) on Fedora 39's Wayland GNOME session, if you hit Ctrl+K
while the focus is on the web view, the addressbar's contents get replaced by the default search engine keyword (ex: !ddg
) in order to allow doing a search engine query directly, like Firefox. However, in Epiphany the focus and text input cursor is not set to the end of the string in the addressbar. It should be.
Edited by Jeff Fortin