Focus location entry on search hotkey

Fixes: https://gitlab.gnome.org/GNOME/epiphany/-/issues/2278
Part-of: <https://gitlab.gnome.org/GNOME/epiphany/-/merge_requests/1439>